# dbus-tutils

./: .gitignore  CMakeLists.txt  README.md
AccelerometerTrigger/: CMakeLists.txt  main.c  test.sh
